# Led-Server

./: CMakeLists.txt  README.md  command.h  led.cpp  led.h  led_server.cpp  led_server.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
command/: led_get_color_command.cpp  led_get_color_command.h  led_get_rate_command.cpp  led_get_rate_command.h  led_get_state_command.cpp  led_get_state_command.h  led_set_color_command.cpp  led_set_color_command.h  led_set_rate_command.cpp  led_set_rate_command.h  led_set_state_command.cpp  led_set_state_command.h
